<package>
  <name>multisim</name>
  <version>1.0.0</version>
  <description>

    multisim provides mechanisms to communicate with multiple Gazebo simulations over multiple hosts.
    Originally taken from the multimaster project and adapted:

    Multimaster is a script allowing to register topics and services at a second
    master and to subscribe to topics and services from a second master.
    Maintained by Wim Meeussen (http://ros.org/wiki/multimaster).

  </description>
  <maintainer email="sebastian@rockel.cc">Sebastian Rockel</maintainer>
  <license>BSD</license>
  <!--<review status="unreviewed" notes=""/>-->
  <url>http://ros.org/wiki/multisim</url>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<depend package="ros" />-->
  <!--<depend package="ros_comm" /> [> rospy, rosgraph <]-->

</package>
