<package>
  <name>topple_scenarios</name>
  <version>1.0.0</version>
  <description>

     scenarios contains simulation scenarios.

  </description>
  <maintainer email="sebastian@rockel.cc">Sebastian Rockel</maintainer>
  <license>BSD</license>
  <!--<review status="unreviewed" notes=""/>-->
  <url>http://ros.org/wiki/scenarios</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pr2_navigation_global</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>race_simulation_run</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>race_pr2_markers</build_depend>

  <export>
    <!--<cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -ltest_utility"/>-->
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
  </export>

</package>

